réglage zoom et taille images page communication

--- a/src/app/components/communication/communication.component.html
+++ b/src/app/components/communication/communication.component.html
@@ -4,7 +4,7 @@
       <a (click)="setTitle('ADCreativ - Plaquettes')"
       routerLink="plaquettes">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/plaquette/Chabanon.jpg" alt="Plaquette du domaine Alain Chabanon">
+        <img class="content-image" src="assets/images/plaquette/Chabanon.png" alt="Plaquette du domaine Alain Chabanon">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Plaquettes</h4>
         </div>
@@ -30,7 +30,7 @@
       <a (click)="setTitle('ADCreativ - PLV')"
       routerLink="PLV">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/PLV/Kakemono-Terroir2.jpg" alt="Kakemono Terroir">
+        <img class="content-image" src="assets/images/PLV/Kakemono-Terroir2.png" alt="Kakemono Terroir">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">PLV</h4>
         </div>
@@ -43,7 +43,7 @@
       <a (click)="setTitle('ADCreativ - Pubs')"
       routerLink="pubs">
         <div class="content-overlay"></div>
-        <img class="content-image" src="assets/images/PUB/Facebook-Castelbarry.jpg" alt="Publicité Facebook Castelbarry">
+        <img class="content-image" src="assets/images/PUB/Facebook-Castelbarry.png" alt="Publicité Facebook Castelbarry">
         <div class="content-details fadeIn-bottom fadeIn-left">
           <h4 class="content-title">Pubs</h4>
         </div>
