--- a/src/app/components/communication/print-advert/print-advert.component.html
+++ b/src/app/components/communication/print-advert/print-advert.component.html
@@ -1,3 +1,15 @@
+<ul class="nav">
+  <li class="nav-item">
+    <a class=" nav-item nav-link" routerLink="/communication/plaquettes" (click)="setTitle('ADCreativ - Plaquettes')">Plaquettes</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-item nav-link" routerLink="/communication/logos" (click)="setTitle('ADCreativ - Logos')">Logos</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-item nav-link" routerLink="/communication/PLV" (click)="setTitle('ADCreativ - PLV')">PLV</a>
+  </li>
+</ul>
+
 <h2>Création d'encarts publicitaires</h2>
 
 <h4>Castelbarry</h4>
@@ -5,20 +17,23 @@
 <div class="box">
 <p>Conception d'une annonce publicitaire pour la page Facebook de la coopérative <a href="https://montpeyroux.org/" target="_blank">Castelbarry</a></p>
 
-<input type="checkbox" id="zoomCastel">
+<!-- <input type="checkbox" id="zoomCastel">
   <label for="zoomCastel">
 <img class="img-fluid castelbarry" src="assets/images/PUB/Facebook-Castelbarry.jpg" alt="Publicité Facebook Castelbarry">
-</label>
+</label> -->
+
+<img class="img-fluid castelbarry" src="{{album[0].thumb}}" (click)="open(0)" alt="Publicité Facebook Castelbarry"/>
 </div>
 
 
 <h4>M.A Silva</h4>
 
 <div class="box">
-  <input type="checkbox" id="zoomSilva">
+  <!-- <input type="checkbox" id="zoomSilva">
   <label for="zoomSilva">
     <img class="img-fluid silva" src="assets/images/PUB/quartpage.png" alt="Quart de page M.A Silva">
-  </label>
+  </label> -->
+  <img class="img-fluid silva" src="{{album[1].thumb}}" (click)="open(1)" alt="Quart de page M.A Silva"/>
 <p>Conception d'une publicité format quart de page pour le producteur de bouchons en liège portugais <a href="https://www.masilva.pt/masilvasite/index.php?idioma=fr" target="_blank">M.A Silva</a></p>
 </div>
 
@@ -27,6 +42,7 @@
 <div id="frelin">
 <p>Création d'une bannière publicitaire pour les vignobles <a href="http://jacquesfrelin.com/fr/" target="_blank">Jacques Frelin</a></p>
 
-<img id="frelin" class="img-fluid" src="assets/images/PUB/Banniere-BIODIS-aout 2019.png" alt="Bannière Biodis Jacques Frelin">
+<!-- <img id="frelin" class="img-fluid" src="assets/images/PUB/Banniere-BIODIS-aout 2019.png" alt="Bannière Biodis Jacques Frelin"> -->
+<img class="img-fluid frelin" src="{{album[2].thumb}}" (click)="open(2)" alt="Bannière Biodis Jacques Frelin"/>
   
 </div>
