--- a/src/app/components/agenda/agenda.component.scss
+++ b/src/app/components/agenda/agenda.component.scss
@@ -2,7 +2,7 @@ h2 {
     color: #A8E6CE;
     padding-top: 30px;
     padding-bottom: 30px;
-font-variant-caps: all-petite-caps;
+// font-variant-caps: all-petite-caps;
 }
 
 table {
