--- a/src/app/components/communication/leaflets/leaflets.component.scss
+++ b/src/app/components/communication/leaflets/leaflets.component.scss
@@ -8,18 +8,27 @@ h4 {
     padding-top: 30px;
     padding-bottom: 30px;
 }
-p, a {
+p {
     width: 60%;
     color: #b2b2b2;
     font-size: 20px;
     padding-right: 40px;
     text-align: justify;
+    a {
+        color: #b2b2b2;
+        font-size: 20px;
+            &:hover {
+            text-decoration: none;
+            color: white;
+        }
+    }
 }
 
 img {
     height: 300px;
     width: auto;
     padding-right: 40px;
+    cursor: pointer;
 }
 
 #savary {
@@ -33,4 +42,22 @@ img {
 #verso {
     float: right;
 }
+
+.nav {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    top: 20px;
+  }
+  
+  a {
+    color:#696969;
+    font-size: 15px;
+    width: auto;
+  }
+  
+  a:hover {
+    text-decoration: none;
+    color: white;
+  }
 
