--- a/src/app/components/packaging/boxes/boxes.component.scss
+++ b/src/app/components/packaging/boxes/boxes.component.scss
@@ -9,19 +9,45 @@ h4 {
     padding-top: 30px;
     padding-bottom: 30px;
 }
-p, a {
+p {
     width: 60%;
     color: #b2b2b2;
     font-size: 20px;
     padding-right: 40px;
+    a {
+      color: #b2b2b2;
+      font-size: 20px;
+          &:hover {
+          text-decoration: none;
+          color: white;
+      }
+    }
 }
 
 img {
-    height: 300px;
+    // height: 300px;
     width: auto;
     padding-right: 40px;
     cursor: pointer;
 }
+
+.nav {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    top: 20px;
+  }
+  
+  a {
+    color:#696969;
+    font-size: 15px;
+    width: auto;
+  }
+  
+  a:hover {
+    text-decoration: none;
+    color: white;
+  }
 
 // #zoomCastelcubi {
 //     display: none;
